v2.3.0:
Ability are now working.
The Storage folder is going to be moved at the top Broforce folder

v2.2.2:
Fixed boondock bro being left behind when spawning a custom bro.

v2.2.1:
Fix the mod breaking Arcade Mode

v2.2.0:
Added custom bro cutscene support.
Added custom bro IronBro support.
Added option to replace special sprites for custom bros.
Added option to display UI options for custom bros.
Fixed bug with custom bros being unable to be killed by spikes, enter worm tunnels, pilot mechs, and pickup special ammo.
Fixed wrong sprite showing up on end screen when custom bros died.
Fixed default bros having their avatars overwritten by custom bros.
Fixed custom bros being unable to use golden flex power.
Fixed custom bros not showing up on helicopter when dropping in.
Fixed invulnerability flash not working for custom bros.

v2.1.0:
Fixed automatic spawning for custom bros
Added option to enable / disable automatic spawning for specific bros
Fix Halo and JetPackSprite Instantiation
Halo has two presets: "Halo_Default" and "Halo_AlwaysShown" ;  Assign them with parameters "HaloType"
Grenade and Projectiles assets can be loaded with the resource name.

v2.0.2:
Health value is at 1 by default
Move some settings to Settings.json

v2.0.1 :
Fix player bubble position

v2.0.0 :
Use preset to spawn a bro
Can now spawn a custom bro with any other bro(was restraint to fix some issues)

v1.0.6 :
Added Missing save file button in editor
Fix clone button

v1.0.5 :
Added an editor
Added a Json file creator
Rework the GUI
Change/fix a various things

v1.0.4 :
Fix grenade doing self damage bug
Now spawn with the projectiles and grenade of the current bro
Enum in json: integers have been replace by strings
Swap automatically with a given probability after a vanilla bro has spawn

v1.0.3 :
BroMaker dll is now seperate from the part which load the mod.
Sort classes in namespaces
Remove unused classes and namespace
Can load custombro from JSON and XML

v1.0.2 :