@@ -37,7 +37,7 @@ namespace BroMakerLib.UnityMod
             try
             {
                 // Set BroMaker Path
-                DirectoriesManager.StorageDirectory = Path.Combine(Directory.GetCurrentDirectory(), "Storage\\");
+                DirectoriesManager.StorageDirectory = Path.Combine(Directory.GetCurrentDirectory(), "BroMaker_Storage\\");
                 // Initialize BroMaker
                 BroMaker.Initialize();
             }
