@@ -1,6 +1,7 @@
 v2.3.0:
-Ability are now working.
-The Storage folder is going to be moved at the top Broforce folder
+Added Abilities.
+Change the location of the Storage Folder -> \Broforce\BroMaker_Storage\
+Fixed all of the warnings when presets are reloaded
 
 v2.2.2:
 Fixed boondock bro being left behind when spawning a custom bro.
